# car_radar

./: .gitignore  readme.md
bag/: label.rviz  rviz.rviz
bag/test_20260121/: metadata.yaml
config/: camera_intrinsic.yaml  default.rviz  default.yaml
interfaces/oden_interfaces/: CMakeLists.txt  README.md  package.xml
interfaces/oden_interfaces/msg/: Detection.msg  Detections.msg  EgoMotion.msg  FreeSpace.msg  GroundPlane.msg  MultiObjectTracking.msg  ObjectTrack.msg
interfaces/raf_interfaces/: CMakeLists.txt  README.md  package.xml
interfaces/raf_interfaces/msg/: CFAR.msg  ControlState.msg  NTC.msg  Resolution.msg  SequenceType.msg  SpotRsl.msg  TPointCloudV11.msg  Thresholds.msg  UDPPacket.msg
interfaces/raf_interfaces/srv/: RdrCtrlSetActiveSeq.srv  RdrCtrlSetRsl.srv  RdrCtrlSetThresholds.srv  RdrCtrlStartTx.srv  SysCfgSetTime.srv
launch/: standard.py
launch/utils/: add_camera_node.py  add_perception_node.py  add_perception_visualizer_node.py  add_radar_node.py  add_transform_node.py  check_node_presence.py
src/: readme.md
src/arbe_raf/: CMakeLists.txt  README.md  license  package.xml
src/arbe_raf/include/arbe_raf/: CommonBase.h  Raf_Api.h  Utils.h  tlv.h  ver.h
src/arbe_raf/src/RAF_API_Library/: Raf_Api.c
src/arbe_raf/src/Utilities/: Utils.c  tlv.c
src/axis_rtsp/: CMakeLists.txt  README.md  package.xml
src/axis_rtsp/launch/: standard_launch.py
src/axis_rtsp/src/: main.cpp  rtsp_image.cpp  rtsp_image.hpp
src/chassis_driver/launch/: chassis_driver.launch.py
src/hugin/: CMakeLists.txt  README.md  changelog.md  package.xml
src/hugin/launch/: standard_launch.py
src/hugin/src/: control_node_exe.cpp  hugin_raf_control_node.hpp  hugin_raf_pointcloud_parser_node.hpp  hugin_string_helpers.cpp  hugin_string_helpers.hpp  hugin_udp_receiver_node.hpp  pointcloud_parser_node_exe.cpp  radar_client.hpp  udp_node_exe.cpp
src/hugin/test/: string_helpers.cpp
src/hugin_gtkgui/: CMakeLists.txt  README.md  package.xml
src/hugin_gtkgui/launch/: gui_launch.py
src/hugin_gtkgui/resources/: window.glade  window.gresource.xml
src/hugin_gtkgui/src/: application.hpp  filter.hpp  info_bar.hpp  radar_statistics_frame.hpp  radar_status_frame.hpp  rafgui.cpp  rafgui_node.hpp  window.gresources.c  window.hpp
src/liboden/: CMakeLists.txt  README.md  package.xml
src/liboden/include/liboden/: IO_Types.hpp  PerceptionAPI.hpp
src/oden/: CMakeLists.txt  README.md  license  package.xml
src/oden/launch/: standard_launch.py
src/oden/src/: AnnotationPoint.hpp  RadarPerception.cpp  RadarPerception.hpp  main.cpp
src/pointcloud_sender/: CMakeLists.txt  package.xml
src/pointcloud_sender/src/: pointcloud_sender.cpp
src/radar_filter_ai/: package.xml  readme.md  setup.cfg  setup.py
src/radar_filter_ai/radar_filter_ai/: radar_filter_node.py
src/rslidar_sdk/src/rs_driver/cmake/: rs_driverConfig.cmake
src/runes/: CMakeLists.txt  README.md  package.xml
src/runes/include/: PerceptionVisualizer.hpp  PolygonGenerator.hpp
src/runes/src/: PerceptionVisualizer.cpp  PolygonGenerator.cpp  main.cpp
tools/bag_record/: hugin_record.sh
